# phase

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  Tiltfile  data-files.json
.cargo/: config.toml
.claude/agents/: engine-implementer.md  engine-planner.md  mtg-rules-auditor.md
.githooks/: pre-push
.github/workflows/: ci.yml  deploy.yml  refresh-feeds.yml  release.yml
client/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
client/public/: card-names.json
client/src/: App.tsx  index.css  main.tsx  (+1 more)
client/src-tauri/: Cargo.toml  tauri.conf.json
crates/draft-wasm/: Cargo.toml
crates/draft-wasm/src/: bot_ai.rs  lib.rs  suggest.rs
data/: engine-inventory.json  learned-weights.json
deploy/: deploy.sh  phase-server.nginx.conf  phase-server.service  push.sh  setup-vps.sh
docs/: parser-instructions.md
rules/: cr_400.toml  cr_401.toml  cr_402.toml  cr_403.toml  cr_404.toml  cr_405.toml  cr_406.toml  cr_407.toml  cr_408.toml  cr_500.toml  cr_502.toml  cr_503.toml  cr_504.toml  cr_505.toml  cr_506.toml  cr_507.toml  cr_508.toml  cr_509.toml  cr_510.toml  cr_511.toml  cr_512.toml  cr_513.toml  cr_704.toml
scripts/: audit-parser.py  build-wasm.sh  check-parser-combinators.sh  clean-target.sh  coverage-regression-check.sh  create-github-labels.sh  deploy-cf.sh  export-discord-threads.mjs  fetch-comp-rules.sh  gen-card-data.sh  gen-scryfall-images.sh  gen-scryfall-printings.sh  gen-scryfall-sets.sh  setup.sh  sync-bug-reports.ts  train_eval_weights.py
(+856 files in other folders)
